--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.0",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-react": "^7.22.0",
     "postcss": "^8.2.6",
