--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "fakerphp/faker": "^1.13",
         "fideloper/proxy": "^4.2",
         "inertiajs/inertia-laravel": "^0.4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
