--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.12.13",
+    "@headlessui/react": "^1.3.0",
     "@inertiajs/inertia": "^0.8.5",
     "@inertiajs/inertia-react": "^0.5.4",
     "@inertiajs/progress": "^0.2.4",
@@ -24,6 +25,7 @@
     "lodash": "^4.17.21",
     "postcss-import": "^12.0.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "react-use": "^13.27.1",
