--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "react-icons": "^4.2.0",
     "react-use": "^13.27.1",
     "resolve-url-loader": "^3.1.2",
     "tailwindcss": "^2.0.3"
