--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "inertiajs/inertia-laravel": "^0.4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^8.0",
+        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "league/glide": "2.0.x-dev",
