--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,12 @@
       "@php artisan migrate:fresh",
       "@php artisan db:seed"
     ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate"
+    ],
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
       "@php artisan package:discover"
